# backtesting.py

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Naitik  README.md  _stats.py  _util.py  backtesting.py  example.html  example.js  index.html  local_testing.py  logo.py  plx.gif.html  pyproject.toml  requirements.txt  robots.txt  sample.py  setup.cfg  setup.py  sitemap.txt  test.py  trade_plotter.py
.claude/: settings.json
.claude/hooks/: invoke_preferences.py  post-execution.sh  pretool-usage.sh  process_skill.py  user-prompt-submit.sh
.claude/skills/: backtesting-analyzer.md  code-quality.md  docs-builder.md  personal-coding-preferences.md  redundant-skills.md  test-runner.md
.claude/skills/backtesting/: fillna-interpolation.md  performance-profiling.md  plotting-visualization.md  reproducibility.md  strategy-examples.md
.github/: FUNDING.yml  deploy-gh-pages.sh  issue_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-enh.yml  config.yml
.github/workflows/: ci.yml  deploy-docs.yml
New folder/: .codecov.yml  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg
New folder/.github/workflows/: ci.yml
New folder/backtesting/: __init__.py  _plotting.py  lib.py
New folder/backtesting/test/: __main__.py
New folder/doc/: README.md  alternatives.md
New folder/doc/examples/: Multiple Time Frames.py  Parameter Heatmap & Optimization.py  Quick Start User Guide.ipynb  Strategies Library.ipynb  Strategies Library.py  Trading with Machine Learning.py
New folder/doc/pdoc_template/: logo.mako
backtesting/: __init__.py  _plotting.py  _stats.py  _util.py  _version.py  autoscale_cb.js  backtesting.py  backtesting_new.py  lib.py
backtesting/.eggs/setuptools_git-1.2-py3.7.egg/EGG-INFO/: RECORD
backtesting/.eggs/setuptools_scm-4.1.2-py3.7.egg/EGG-INFO/: PKG-INFO  RECORD  entry_points.txt  requires.txt
backtesting/.eggs/setuptools_scm-4.1.2-py3.7.egg/setuptools_scm/: __init__.py  __main__.py  config.py  file_finder.py  file_finder_git.py  file_finder_hg.py  git.py  hg.py  integration.py  utils.py  version.py  win_py31_compat.py
backtesting/test/: AMZN.csv  BTCUSD.csv  SOLUSDT.csv  __init__.py  __main__.py  _iteration.py  _test.py
backtesting_graphs/: __init__.py  _plotting.py  _stats.py  lib.py  trade_model.py
backtesting_graphs/test/: _test.py
backtrading/: __init__.py  _plotting.py  _stats.py  _util.py  backtrading.py  lib.py  strategy.py  trading.py
backtrading/test/: _test.py
doc/: Quick Start User Guide.py  README.md  alternatives.md  build.sh  deploy.sh  doc-search.html  index.html  index.js
doc/backtesting/: backtesting.html  index.html  lib.html
doc/backtesting/test/: index.html
doc/examples/: FXMacroData Forex Data.ipynb  FXMacroData Forex Data.py  Multiple Time Frames.html  Multiple Time Frames.ipynb  Multiple Time Frames.py  Parameter Heatmap & Optimization.html  Parameter Heatmap & Optimization.ipynb  Parameter Heatmap & Optimization.py  Parameter Heatmap.html  Parameter Heatmap.ipynb  Parameter Heatmap.py  Quick Start User Guide.html  Quick Start User Guide.ipynb  Quick Start User Guide.py  Strategies Library.html  Strategies Library.ipynb  Strategies Library.py  Trading with Machine Learning.html  Trading with Machine Learning.ipynb  Trading with Machine Learning.py  main.py  pyproject.toml  quick_start_scikit_optimize.ipynb  quick_start_scikit_optimize.py
doc/examples/Multi Asset Trading/: Bollinger Band Portfolio.ipynb  Bollinger Band Portfolio.py  Leveraged Cointegration Pairs Trading.ipynb  Leveraged Cointegration Pairs Trading.py
doc/pdoc_template/: config.mako  credits.mako  head.mako  html_remove.mako
doc/scripts/: ipython_config.py  strip_yaml.awk
livetrading/: broker.py  config.py  converter.py  env  event.py  executor.py  live_trading.py  rest_cli.py  websocket_client.py
