[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting"
description = "Backtest trading strategies in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Zach Lûster" }
]
keywords = [
    "algo", "algorithmic", "ashi", "backtest", "backtesting",
    "bitcoin", "bokeh", "bonds", "candle", "candlestick",
    "cboe", "chart", "cme", "commodities", "crash",
    "crypto", "currency", "doji", "drawdown", "equity",
    "etf", "ethereum", "exchange", "finance", "financial",
    "forecast", "forex", "fund", "futures", "fx",
    "fxpro", "gold", "heiken", "historical", "indicator",
    "invest", "investing", "investment", "macd", "market",
    "mechanical", "money", "oanda", "ohlc", "ohlcv",
    "order", "price", "profit", "quant", "quantitative",
    "rsi", "silver", "simulation", "stocks", "strategy",
    "ticker", "trader", "trading", "tradingview", "usd",
]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.17.0",
    "pandas>=0.25.0,!=0.25.0",
    "bokeh>=3.0.0,!=3.0.*,!=3.2.*",
    "polars>=1.36.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://kernc.github.io/backtesting.py/"
Documentation = "https://kernc.github.io/backtesting.py/doc/backtesting/"
Source = "https://github.com/kernc/backtesting.py/"
Tracker = "https://github.com/kernc/backtesting.py/issues"

[project.optional-dependencies]
doc = [
    "pdoc3",
    "jupytext>=1.3",
    "nbconvert",
    "ipykernel",
    "jupyter_client",
]
test = [
    "matplotlib",
    "scikit-learn",
    "sambo",
    "tqdm",
    "ipywidgets",
]
dev = [
    "ruff",
    "coverage",
    "pyright",
]
examples = [
    "jupyter",
    "matplotlib",
    "scikit-learn",
    "ipykernel",
]
all = [
    "pdoc3",
    "jupytext>=1.3",
    "nbconvert",
    "ipykernel",
    "jupyter_client",
    "matplotlib",
    "scikit-learn",
    "sambo",
    "tqdm",
    "ipywidgets",
    "ruff",
    "coverage",
    "pyright",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["backtesting*"]

[tool.setuptools.package-data]
backtesting = ["**/*"]

[tool.setuptools_scm]
write_to = "backtesting/_version.py"

[tool.ruff]
exclude = [
    '.git',
    '.eggs',
    '__pycache__',
    'doc/examples',
]
line-length = 100

[tool.ruff.lint]
ignore = [
    'UP006',
    'UP007',
    'UP009',
    'N802',
    'N806',
    'C901',
    'B008',
    'B011',
    'RUF002',
]
select = [
    'I',
    'E',
    'F',
    'W',
    'UP',
    'N',
    'C',
    'B',
    'T',
    'RUF',
    'YTT',
]

[tool.ruff.lint.pep8-naming]
ignore-names = [
    'l',
    'h',
]

[tool.flake8]
ignore = ["F824", "W503", "W504"]
max-line-length = 120
exclude = [
    ".git",
    ".eggs",
    "__pycache__",
    "doc/examples",
]

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
disable_warnings = ["no-data-collected"]
source = ["backtesting", "doc/examples"]

[tool.coverage.report]
exclude_lines = [
    "^\\s*continue\\b",
    "^\\s*return\\b",
    "^\\s*raise\\b",
    "^\\s*except\\b",
    "^\\s*warnings\\.warn\\(",
    "^\\s*warn\\(",
]

